--- a/Tutorial/spatial-analysis-and-mapping-workshop.Rmd
+++ b/Tutorial/spatial-analysis-and-mapping-workshop.Rmd
@@ -49,6 +49,19 @@ install.packages("UScensus2010county", repos="http://R-Forge.R-project.org")
 install.packages("UScensus2010tract", repos="http://R-Forge.R-project.org")
 ```
 
+### Load the US Census packages
+```{r}
+library(UScensus2010)
+library(UScensus2010county)
+data(washington.county10)
+```
+
+### Plot Washington Counties
+
+```{r, fig.width = 4.5, fig.height = 4.5,fig.align='center'} 
+plot(washington.county10)
+```
+
 ## Zillow Neighborhoods
 
 We are going to use some data from <http://zillow.com> which will allow us to work with the neighborhoods of Seattle! You can download the neighborhoods directly at <http://www.zillow.com/howto/api/neighborhood-boundaries.htm>.
