--- a/Helper_Files/setupForTheWS.Rmd
+++ b/Helper_Files/setupForTheWS.Rmd
@@ -13,25 +13,25 @@ R, RStudio and Github.
 * Next, go to File->New Project
 <center>
 <div style="width:500px; height=400px">
-![](figures/RStudioGit1.TIFF)
+![](figures/RStudioGit1.PNG)
 </div>
 </center>
 * Select Version Control -> Git
 <center>
 <div style="width:500px; height=400px">
-![](figures/RStudioGit2.TIFF)
+![](figures/RStudioGit2.PNG)
 </div>
 </center>
 * Type in <https://github.com/zalmquist/spatial-analysis-and-mapping-workshop.git> and use SAP for the project name. I recommend saving the project on your Desktop.
 <center>
 <div style="width:500px; height=400px">
-![](figures/RStudioGit3.TIFF)
+![](figures/RStudioGit3.PNG)
 </div>
 </center>
 * The result should look something like this!
 <center>
 <div style="width:500px; height=400px">
-![](figures/RStudioGit4.TIFF)
+![](figures/RStudioGit4.PNG)
 </div>
 </center>
 
